--- a/travelRecommendation/style.css
+++ b/travelRecommendation/style.css
@@ -1,400 +1,385 @@
+/* ===============================
+   GOOGLE FONTS
+================================== */
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    scroll-behavior: smooth;
+/* ===============================
+   BASE STYLES
+================================== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
-    width: 8px; 
+  width: 8px;
 }
-
 ::-webkit-scrollbar-thumb {
-    background: #888; 
-    border-radius: 5px; 
+  background: #888;
+  border-radius: 5px;
 }
-
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+  background: #555;
 }
-
-
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+  background: #f1f1f1;
 }
 
-
-nav{
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-    padding: 1rem 1rem;
-    align-items: center;
-    background: linear-gradient(120deg, rgb(30, 62, 60),rgb(30, 62, 60) ,rgb(100, 90, 90));
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
+/* ===============================
+   BACKGROUND LAYERS
+================================== */
+.background-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("images/city.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -2;
 }
 
-
-#logo{
-    display: flex;
-    align-items: center;
+.background-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(
+    to right,
+    rgba(5, 103, 107, 0.85),
+    rgba(5, 104, 107, 0.55),
+    rgba(255, 255, 255, 0)
+  );
+  z-index: -1;
 }
 
-.logo{
-    color: #fff;
+/* ===============================
+   NAVIGATION
+================================== */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background: linear-gradient(120deg, rgb(30, 62, 60), rgb(30, 62, 60), rgb(100, 90, 90));
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
 }
 
-.name{
-    font-size: 1.3rem;
-    color: #fff;
-    margin-left: .5rem;
-    font-family: "Kaushan Script", cursive;
-    font-weight: 400;
-    font-style: normal;
+#logo {
+  display: flex;
+  align-items: center;
 }
 
-#links a{
-    text-decoration: none;
-    margin-left: 1rem;
-    color: #fff;
-    font-weight: 400;
-    font-size: 1.2rem;
-    transition: .3s ease-out;
+.logo {
+  color: #fff;
 }
 
-#links a:hover{
-    color: yellow;
-
+.name {
+  font-size: 1.3rem;
+  color: #fff;
+  margin-left: 0.5rem;
+  font-family: "Kaushan Script", cursive;
 }
 
-.searchinput{
-    width: 15rem;
-    border: none;
-    outline: none;
-    color: rgb(5, 103, 107);
+#links a {
+  text-decoration: none;
+  margin-left: 1rem;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.2rem;
+  transition: 0.3s ease-out;
+}
+#links a:hover {
+  color: yellow;
 }
 
-::placeholder{
-    color: rgb(5, 103, 107);
+#search {
+  background-color: #fff;
+  padding: 0.3rem 1rem;
+  border-radius: 20px;
+}
+.searchinput {
+  width: 15rem;
+  border: none;
+  outline: none;
+  color: rgb(5, 103, 107);
+}
+::placeholder {
+  color: rgb(5, 103, 107);
+}
+.searchicon {
+  color: rgb(5, 103, 107);
+}
+.btn {
+  padding: 0.2rem 0.4rem;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  background-color: rgb(5, 103, 107);
+  color: #fff;
+  margin-left: 0.3rem;
+  cursor: pointer;
 }
 
-
-#search{
-    background-color: #fff;
-    padding: .3rem 1rem;
-    border-radius: 20px;
+/* ===============================
+   SOCIAL LINKS
+================================== */
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.searchicon{
-    color: rgb(5, 103, 107) ;
+.sociallinks {
+  position: fixed;
+  bottom: 0;
+  left: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.3s ease-out;
 }
 
-.btn{
-    padding: .2rem .4rem;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    background-color:rgb(5, 103, 107) ;
-    color: #fff;
-    margin-left: .3rem;
+.linkslogo {
+  color: #fff;
+  transition: 0.3s ease-out;
+}
+.linkslogo:hover {
+  color: gold;
+}
+.verticalline {
+  width: 2px;
+  height: 17rem;
+  background-color: #fff;
+  border-radius: 2px;
+  margin-bottom: 5rem;
+}
+.sociallinks a {
+  margin-bottom: 1.7rem;
 }
 
-/* Home Section */
-
-.MainSection{
-    margin-top: 5rem;
-    width: 100%;
-    height: auto;
-    background-image: url("city.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: flex-start;
+/* ===============================
+   SECTIONS (GENERAL)
+================================== */
+section {
+  position: relative;
+  width: 100%;
+  padding: 6rem 3rem;
+  color: #fff;
 }
 
-.mainpage{
-    display: flex;
-    flex-direction: column;
+/* ===============================
+   HOME SECTION
+================================== */
+.MainSection {
+  margin-top: 5rem;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: flex-start;
 }
 
-.Homecontent{
-    display: flex;
-    background: linear-gradient(to right, rgb(5, 103, 107), rgba(5, 104, 107, 0.632),rgba(5, 104, 107, 0.332) ,#ffffff00);
-    height: 100%;
-    padding: 2rem 3rem;
-
+.Homecontent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 2rem 3rem;
 }
 
-
-.linkslogo{
-    color: #fff;
-    transition: .3s ease-out;
+.homesectionheader {
+  font-size: 5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: #fff;
+  line-height: 5rem;
 }
 
-
-.linkslogo:hover{
-    color: gold;
+.homesectiondescription {
+  color: #fff;
+  margin-top: 2rem;
+  font-size: 1.2rem;
 }
 
-.verticalline{
-    width: 2px;
-    height: 18rem;
-    background-color: #fff;
-    border-radius: 2px;
-    margin-bottom: 5rem;
+.bookbtn {
+  padding: 0.7rem 3rem;
+  background-color: rgb(7, 89, 92);
+  border: none;
+  color: #fff;
+  font-weight: bold;
+  margin-top: 2rem;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 0 8px #fff;
+  transition: 0.3s ease-out;
 }
-.sociallinks a{
-    margin-bottom: 1.5rem;
-}
-
-
-.links{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.sociallinks{
-    position: fixed;
-    bottom: 0;
-    left: 1%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: .3s ease-out;
-    
+.bookbtn:hover {
+  background-color: rgb(15, 134, 138);
+  box-shadow: 0 0 8px #fbfe28;
 }
 
-
-.mainhomecontent{
-    padding: 5rem 2rem;
+/* ===============================
+   ABOUT SECTION
+================================== */
+#About {
+  background: transparent;
 }
 
-.homesectionheader{
-    font-size: 5rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: #fff;
-    font-weight: bolder;
-    line-height: 5rem;
+.aboutusheader {
+  font-size: 5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 1rem;
 }
 
-.homesectiondescriptoin{
-    color: #fff;
-    margin-top: 2rem;
-    font-size: 1.2rem;
+.aboutustxt {
+  background-color: rgba(0, 0, 0, 0.45);
+  padding: 2rem;
+  width: 60%;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
 }
 
-
-.bookbtn{
-    padding:.7rem 3rem ;
-    background-color: rgb(7, 89, 92);
-    border: none;
-    outline: none;
-    color: #fff;
-    font-weight: bold;
-    margin-top: 2rem;
-    cursor: pointer;
-    border-radius: 5px;
-    box-shadow: 0 0 8px #fff;
-    transition: .3s ease-out;
+/* ===============================
+   CONTACT SECTION
+================================== */
+#Contactus {
+  background: transparent;
 }
 
-.bookbtn:hover{
-    background-color:  rgb(15, 134, 138);
-    box-shadow: 0 0 8px #fbfe28;
+.contactustitle {
+  font-size: 4rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: #fff;
+  margin-bottom: 1rem;
 }
 
-
-#About{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height:auto;
-    padding: 4rem 5rem;
-    background: linear-gradient(to right, rgb(5, 103, 107), rgba(5, 104, 107, 0.632),rgba(5, 104, 107, 0.332) ,#ffffff00);
+.formsection {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.45);
+  border-radius: 10px;
 }
 
-.aboutusheader{
-    font-size: 5rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: #fff;
-    font-weight: bolder;
-    line-height: 5rem;
+form {
+  width: 100%;
+}
+.labels {
+  color: #fff;
+}
+form .inputval {
+  width: 100%;
+  border: 0.5px solid #fff;
+  outline: none;
+  color: #fff;
+  background: transparent;
+  border-radius: 5px;
+  padding: 0.3rem 0.5rem;
+}
+.submitmessagebtn {
+  width: 100%;
+  padding: 0.5rem 0;
+  margin-top: 0.8rem;
+  color: #fff;
+  background-color: rgb(5, 103, 107);
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
-.aboutustxt{
-    background-color: rgba(0, 0, 0, 0.288);
-    padding: 1rem 1rem;
-    width: 40rem;
-    height: auto;
-    border-radius: 10px;
-    margin-top: 2rem;
-    color: #fff;
-    font-size: 1.2rem;
+/* ===============================
+   SEARCH RESULT DROPDOWN
+================================== */
+.Result {
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.65);
+  border-radius: 10px;
+  position: fixed;
+  right: 2%;
+  top: 15%;
 }
-
-#Contactus{
-    width: 100%;
-    height: 60vh;
-    padding: 2rem 5rem;
-    background: linear-gradient(to right, rgb(5, 103, 107), rgba(5, 104, 107, 0.632),rgba(5, 104, 107, 0.332) ,#ffffff00);
+.resultvalues {
+  width: 400px;
+  margin: 1rem;
 }
-
-.contactustittle{
-    font-size: 4rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: #fff;
-    font-weight: bolder;
-    line-height: 5rem;
+.resultdescription {
+  color: #fff;
 }
-
-
-.formsection{
-    margin-top: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem 1rem;
-    background-color: rgba(0, 0, 0, 0.288);
+.resulttitle {
+  font-size: 1.2rem;
+  color: #fff;
 }
-
-form{
-    width: 100%;
+.resultimg {
+  width: 100%;
+  height: auto;
 }
-
-.labels{
-    color: #fff;
+#dropdown {
+  background-color: #55555595;
+  position: absolute;
+  width: 30rem;
+  height: auto;
+  padding: 1rem;
+  top: 100%;
+  right: 1%;
+  margin-top: 0.5rem;
+  border-radius: 10px;
+  border: 1px solid white;
+  display: none;
 }
-
-form .inputval{
-    width: 100%;
-    border: .5px solid #fff;
-    outline: none;
-    color: #fff;
-    background: transparent;
-    border-radius: 5px;
-    padding: .3rem .5rem;
+.dropdown-header {
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: flex-end;
 }
-
-
-.submitmessagebtn{
-    width: 100%;
-    padding: .5rem 0;
-    margin-top: .8rem;
-    color: #fff;
-    background-color:rgb(5, 103, 107) ;
-    outline: none;
-    border: none;
-    cursor: pointer;
+#close-btn {
+  padding: 0.5rem;
+  border: none;
+  background-color: rgb(16, 152, 152);
+  color: #fff;
+  font-weight: bolder;
+  transition: 0.3s;
+  border-radius: 5px;
 }
-
-
-.Result{
-    height: auto;
-    background-color: rgba(0, 0, 0, 0.65);
-    border-radius: 10px;
-    position: fixed;
-    right: 2%;
-    top: 15%;
+#close-btn:hover {
+  background-color: rgb(6, 95, 95);
 }
-
-.resultvalues{
-    width: 400px;
-    margin: 1rem 1rem;
+#resultContainer {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: rgba(5, 104, 107, 0.721);
+  border: 1px solid white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  box-shadow: 0 0 6px rgba(255, 255, 255, 0.686);
 }
-
-.resultdescription{
-    color: #fff;
+.description {
+  font-weight: bolder;
+  color: #fff;
 }
-
-.resulttittle{
-    font-size: 1.2rem;
+.search-img {
+  width: 100%;
 }
-
-.resultimg{
-    width: 100%;
-    height: auto;
+.title {
+  color: #fff;
 }
-
-.resulttittle{
-    color: #fff;
-}
-
-
-#dropdown{
-    background-color: #55555595;
-    position: absolute;
-    width: 30rem;
-    height: auto;
-    padding: 1rem 1rem;
-    top: 100%;
-    right: 1%;
-    margin-top: .5rem;
-    border-radius: 10px;
-    border: 1px solid white;
-    display: none;
-}
-
-.dropdown-header{
-    padding: .5rem 1rem;
-    display: flex;
-    justify-content: flex-end;
-}
-
-#close-btn{
-    padding: .5rem .5rem;
-    border: none;
-    background-color: rgb(16, 152, 152);
-    outline: none;
-    color: #fff;
-    font-weight: bolder;
-    transition: .3s;
-    border-radius: 5px;
-}
-
-#close-btn:hover{
-    background-color:  rgb(6, 95, 95);
-}
-
-#resultContainer{
-    width: 100%;
-    margin-bottom: 1rem;
-    background-color: rgba(5, 104, 107, 0.721);
-    border: 1px solid white;
-    padding: .5rem .5rem;
-    border-radius: 5px;
-    box-shadow: 0 0 6px rgba(255, 255, 255, 0.686);
-}
-
-
-.description{
-    font-weight: bolder;
-    color: #fff;
-}
-
-.search-img{
-    width: 100%;
-}
-
-.title{
-    color: #fff;
-}
-
-.notfound{
-    color: #fff;
+.notfound {
+  color: #fff;
 }
